fixing conflict with figcaption contrast

--- a/src/components/blocks/Figure/_Figure.scss
+++ b/src/components/blocks/Figure/_Figure.scss
@@ -1,7 +1,6 @@
 .figure {
-    z-index: 1;
-    
     .img {
+        position: relative;
         width: min(27.5vw, 100%);
 
         aspect-ratio: 1 / 1;
